# slimage

./: CMakeLists.txt  README.md  example.c
include/: generic.h  liblog.h  sequence.h  slassert.h  slbmp.h  slchecksum.h  slcif.h  slcolorspace.h  sldct.h  slendian.h  slframe.h  slimage.h  sljpeg.h  slresize.h  slshader.h  stream.h  typedefs.h
opengl/include/: linmath.h
opengl/include/glad/: glad.h
opengl/src/: glad.c
src/: liblog.c  sequence.c  slbmp.c  slchecksum.c  slcolorspace.c  sldct.c  slendian.c  slframe.c  slimage.c  sljpeg.c  slresize.c  stream.c
template/: slcontainer.h  slstack.h  sltree.h
